<resources>
    <string name="app_name">SegundaAulaLayouts</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="senha">Senha</string>
    <string name="problemas_com_login">Problemas para efetuar login?</string>
    <string name="fazer_login">Fazer login</string>
    <string name="numero_de_telefone">Número de telefone</string>
    <string name="em_vez_disso_use_o_email">Em vez disso, use o e-mail</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="termos_de_servico">Ao clicar em cadastrar-se, você confirma que leu e reconhece os termos de serviços.</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="nome_do_usuario">Fulano da Silva</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="metodos_de_pagamento">Métodos de pagamento</string>
    <string name="canais_inscritos">Canais Inscritos</string>
    <string name="imagem_de_perfil">Imagem de perfil</string>
</resources>