<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/black">

    <ImageView
        android:contentDescription="@string/imagem_de_perfil"
        android:id="@+id/imageProfile"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/txtPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_usuario"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/editar_perfil"
        app:layout_constraintTop_toBottomOf="@+id/txtPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple"
        />

    <Button
        android:id="@+id/btnPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/metodos_de_pagamento"
        app:layout_constraintTop_toBottomOf="@+id/btnEditar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple"/>

    <Button
        android:id="@+id/btnInscricoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/canais_inscritos"
        app:layout_constraintTop_toBottomOf="@+id/btnPagamento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple"/>


</androidx.constraintlayout.widget.ConstraintLayout>