<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        tools:context=".MainActivity">

        <TextView
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:text="@string/nome_de_usuario"
        android:textColor="@color/white"
        android:textSize="18sp"/>


        <EditText
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_radius"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_radius"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:text="@string/problemas_com_login"
            android:textColor="@color/purple"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>


        <Button
            android:layout_height="wrap_content"
            android:text="@string/fazer_login"
            android:backgroundTint="@color/dark_gray"
            android:layout_width="356dp"
            android:textColor="@color/white"/>



    </LinearLayout>

</LinearLayout>
